--- a/index.html
+++ b/index.html
@@ -121,17 +121,15 @@
         <div>
             <img src="./assets/noon pictures/one.jpg" alt="one" class="w-full xl:block lg:block md:block sm:block">
         </div>
-        <div class="flex">
-            <div class="flex w-full">
-                <img src="https://f.nooncdn.com/mpcms/EN0001/assets/adeb24ee-42b0-4d34-84d6-bd55309cf989.png?format=avifundefined"
-                    alt="banner" width="884px" height="185px">
-                <img src="https://f.nooncdn.com/mpcms/EN0001/assets/519ae5db-4c6d-4d27-9ba7-5ea41fdffa10.png?format=avifundefined"
-                    alt="" width="190px" height="185px">
-                <img src="https://f.nooncdn.com/mpcms/EN0001/assets/a393899a-7a52-4201-8f98-43d0be8a8859.png?format=avifundefined"
-                    alt="" width="190px" height="185px">
-            </div>
+        <div class="flex items-center gap-0">
+            <img src="https://f.nooncdn.com/mpcms/EN0001/assets/adeb24ee-42b0-4d34-84d6-bd55309cf989.png?format=avifundefined"
+                alt="banner" class="h-32 w-full">
+            <img src="https://f.nooncdn.com/mpcms/EN0001/assets/519ae5db-4c6d-4d27-9ba7-5ea41fdffa10.png?format=avifundefined"
+                alt="" class="h-32 w-full">
+            <img src="https://f.nooncdn.com/mpcms/EN0001/assets/a393899a-7a52-4201-8f98-43d0be8a8859.png?format=avifundefined"
+                alt="" class="h-32 w-full">
         </div>
-        <div class="bg-[#fff0be] flex pt-3 pb-3 justify-evenly">
+        <div class="bg-[#fff0be] flex pt-3 pb-3 justify-evenly flex-wrap">
             <img src="https://f.nooncdn.com/mpcms/EN0001/assets/4cf2b36f-825c-41fe-b32d-7c857b55dea5.png?format=avifundefined"
                 alt="" width="88px" height="129px">
             <img src="https://f.nooncdn.com/mpcms/EN0001/assets/3ead1590-904c-4625-a7d8-bb0da354dfad.png?format=avifundefined"
@@ -326,7 +324,7 @@
 
     </div>
     <!-- footer start -->
-    <div class="md:flex cursor-pointer justify-evenly pt-4">
+    <div class="flex flex-wrap justify-evenly pt-4 text-sm cursor-pointer">
         
         
         <ul>
@@ -407,7 +405,7 @@
             <li class="text-[#404553] pb-2">Skechers</li>
         </ul>
     </div>
-    <div class="md:flex hidden justify-evenly mt-11 mb-11">
+    <div class="md:flex justify-evenly mt-11 mb-11">
         <div>
             <div class="font-bold text-[#404553] px-11">SHOP ON THE GO</div>
             <div class="flex justify-center mt-2">
@@ -425,7 +423,7 @@
             </div>
         </div>
     </div>
-    <div class="bg-[#f7f7fa] md:flex hidden justify-between ">
+    <div class="bg-[#f7f7fa] md:flex justify-between ">
         <div>
             <div class="text-sm p-6">© 2023 noon. All Rights Reserved</div>
             <ul class="flex justify-evenly text-sm gap-3">
